--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
         <title>Slider</title>
     </head>
-    <body>
+    <body class="swipe">
         <div class="container">
             <div class="slider-wrapper">
                 <div class="prev">
@@ -31,7 +34,6 @@
                 </div>
             </div>
         </div>
-
         <script src="main.js"></script>
     </body>
 </html>
